--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     .title{color:salmon;text-align: center;font-family: fantasy; background-color:blue}
     .lists{background-color: lightblue;text-align: center; color:blue}
     
-    
+    a:hover{background-color: blueviolet}
+    a:visited{color:deeppink}
+    a:focus{background-color: orange}
+    a:active{background-color:aquamarine}
     </style>
 
   <title> Matt Bohan </title>
